# talkie

./: .gitignore  README.md  main.py  pyproject.toml  sr.py  whisper.py
