[project]
name = "talkie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper>=20231117",
    "pyaudio>=0.2.11",
    "numpy>=1.21.0",
    "ruff>=0.12.11",
    "speechrecognition>=3.14.3",
    "soundfile>=0.13.1",
]
